# CariSkill

./: .gitignore  README.md  Walkthrough.txt  copy_script.py  docker-compose.yml  package-lock.json  supabase_schema.sql  tracked.txt
.git_broken4/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_broken4/logs/: HEAD
amls-root/: LICENSE  README.md  do_commit.bat  push_csmerge.bat
apps/api/: main.py  output_backend2.txt  test_backend.py  test_backend2.py  test_content_fetcher.py  (+1 more)
master_flow/: README.md  pyproject.toml  test_macro.py
master_flow/api/: macro_planning.log.txt  main.py  micro_learning.log.txt  temp_macro_blueprint_final.json  temp_macro_crew_debug.json  temp_master_flow_output.json
master_flow/src/master_flow/: main.py
master_flow/src/master_flow/crews/macro_planning_crew/: macro_crew.py
master_flow/src/master_flow/crews/macro_planning_crew/config/: macro_agents.yaml  macro_tasks.yaml
master_flow/src/master_flow/crews/micro_learning_crew/: micro_crew.py
master_flow/src/master_flow/crews/micro_learning_crew/config/: micro_agents.yaml  micro_tasks.yaml
master_flow/src/master_flow/crews/requirements_extraction_crew/: __init__.py  extraction_crew.py  questioning_crew.py
master_flow/src/master_flow/crews/requirements_extraction_crew/config/: agents.yaml  ask_task.yaml  extraction_task.yaml
master_flow/src/master_flow/model/: extracted_data.py  macro_models.py  micro_models.py  system_state.py
master_flow/src/master_flow/tools/: search_tools.py
temp_frontend_design/: README.md  package-lock.json  package.json
(+101 files in other folders)
